add_subdirectory(paxsdl)
include_directories(paxsdl/include/paxsdl)

add_subdirectory(paxopengl)
include_directories(paxopengl/include/paxopengl)

add_subdirectory(paxphysics)
include_directories(paxphysics/include/paxphysics)

add_subdirectory(paxtiles)
include_directories(paxtiles/include/paxtiles)

add_subdirectory(paxassetimport)
include_directories(paxassetimport/include/paxassimp)

add_subdirectory(PlatformerDemo)
include_directories(PlatformerDemo/include/platformerdemo)

add_subdirectory(PlaygroundDemo)
include_directories(PlaygroundDemo/include/playgrounddemo)