add_subdirectory(paxsdl)
add_subdirectory(paxopengl)
add_subdirectory(paxphysics)
add_subdirectory(paxtiles)
add_subdirectory(paxassetimport)
add_subdirectory(paxfont)

add_subdirectory(games/PlatformerDemo)
add_subdirectory(games/TileDemo)
add_subdirectory(games/PlaygroundDemo)
add_subdirectory(games/RayMarcher)